docker made dynamic

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,7 +10,13 @@ RUN apt-get update && apt-get install -y zlib1g-dev g++ git libpng-dev libicu-de
 
 WORKDIR /var/www/project
 
+COPY ./app/ ./
+
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 RUN curl -sS https://get.symfony.com/cli/installer | bash
 RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
+
+RUN composer install
+
+CMD chmod 777 ./public/upload/ ; php-fpm
