--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         ports:
             - "8080:80"
         volumes:
-            - ./app:/var/www/project
+            - app:/var/www/project
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - php74-service
@@ -29,7 +29,9 @@ services:
         ports:
             - "9000:9000"
         volumes:
-            - ./app:/var/www/project
+            - app:/var/www/project
+        depends_on:
+            - mysql8-service
         networks:
             - nginx-php74-mysql8-node
 
@@ -41,10 +43,15 @@ services:
             - "4306:3306"
         volumes:
             - ./mysql:/var/lib/mysql
+            - ./datatable.sql:/docker-entrypoint-initdb.d/1.sql
         command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
         restart: always # always restart unless stopped manually
         environment:
+            MYSQL_DATABASE: slv-table
             MYSQL_ROOT_PASSWORD: secret
             MYSQL_PASSWORD: secret
         networks:
             - nginx-php74-mysql8-node
+
+volumes: 
+    app:
